# meet-scribe

./: README.md  config.yaml  pyproject.toml
notebooks/: meet_scribe_batch_colab.ipynb  meet_scribe_colab.ipynb
src/meet_scribe/: __init__.py  diarizer.py  main.py  recorder.py  transcriber.py
