[project]
name = "meet-scribe"
version = "0.1.0"
description = "Pipeline locale di trascrizione riunioni con speaker diarization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.1.0",
    "pyannote-audio>=3.3.0,<5.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "soundfile>=0.12.0",
    "soundcard>=0.4.6",
    # Floor basso di proposito: su Colab numpy 2.0.2 e' gia' installato e importato
    # all'avvio. Un floor alto (es. >=2.4) forzerebbe pip ad aggiornarlo, e siccome
    # e' gia' importato Colab chiederebbe il "Restart runtime" a ogni prima cella.
    # >=2.0 soddisfa i vincoli reali dell'albero (pyannote-core>=2.0, pandas>=1.26)
    # e lascia pip tenere il numpy gia' presente.
    "numpy>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meet_scribe"]

[tool.uv]
override-dependencies = ["torchcodec==0.0.0; python_version > '9999'"]

[project.scripts]
meet-scribe = "meet_scribe.main:main"
